[gd_scene load_steps=9 format=2]

[ext_resource path="res://textbox/Lugrasimo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://blender/bücherwurm/SprechblaseEckigMitWeiß.png" type="Texture" id=2]
[ext_resource path="res://blender/bücherwurm/BuecherwurmLipng-ohne.png" type="Texture" id=3]
[ext_resource path="res://blender/bücherwurm/bücherwurmLayer.gd" type="Script" id=4]
[ext_resource path="res://blender/tresor/close.png" type="Texture" id=5]
[ext_resource path="res://blender/bücherwurm/Gedankenblase.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 1 )

[node name="BücherwurmLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Bücherwurm" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 182.0
margin_right = 441.0
margin_bottom = 615.0
texture = ExtResource( 3 )

[node name="Sprechblase" type="TextureButton" parent="."]
margin_left = 270.0
margin_top = -75.0
margin_right = 2318.0
margin_bottom = 1973.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprechblase"]
anchor_left = 0.214
anchor_top = 0.206
anchor_right = 0.214
anchor_bottom = 0.206
margin_left = 75.0612
margin_top = 91.445
margin_right = 1419.06
margin_bottom = 744.445
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Ah gut dass du da bist hier geht alles drunter und
 drüber, kannst du gleich mal mitkommen und mir helfen"
autowrap = true

[node name="Close" type="TextureButton" parent="."]
margin_left = 868.0
margin_top = 35.0
margin_right = 913.0
margin_bottom = 82.0
texture_normal = ExtResource( 5 )

[node name="Gedankenblase" type="TextureButton" parent="."]
visible = false
margin_left = 425.0
margin_top = -74.0
margin_right = 2473.0
margin_bottom = 1974.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="Gedankenblase"]
anchor_left = 0.214
anchor_top = 0.206
anchor_right = 0.214
anchor_bottom = 0.206
margin_left = 284.728
margin_top = 38.112
margin_right = 1094.73
margin_bottom = 691.112
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = ".. was? Wo bin ich hier? Was ist hier los?!"
autowrap = true

[connection signal="pressed" from="Sprechblase" to="." method="_on_Sprechblase_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Gedankenblase" to="." method="_on_Gedankenblase_pressed"]
